$Id$

2013-07-20  Christian Franke  <franke@computer.org>

	os_win32/daemon_win32.cpp: Do not install the service as interactive.
	This is no longer supported since Vista and produces misleading error
	messages in event log.

2013-07-20  Christian Franke  <franke@computer.org>

	ataprint.cpp: Do not print 'SCT Commands not supported' if SCT is
	not used (regression from r3825 r3826).
	smartctl.8.in: Mark '-g/-s wcreorder' as EXPERIMENTAL.

2013-07-18  Christian Franke  <franke@computer.org>

	os_win32.cpp: Add Win-8.1 and 2012r2 to get_os_version_str(),
	remove 9x/ME and NT4.

2013-07-08  Alex Samorukov  <samm@os2.kiev.ua>

	Add Automake 1.12.2 to the list of supported versions

2013-07-07  Christian Franke  <franke@computer.org>

	configure.ac: Support SVN 1.8 working copy format.

2013-07-06  Alex Samorukov <samm@os2.kiev.ua>

	smartctl: Added ATA Write Cache Reordering control using "-g wcreorder"
	and "-s wcreorder[,on|off]" options (bug #221)
	smartctl: minor formatting fixes

2013-07-05  Alex Samorukov <samm@os2.kiev.ua>

	HPT RAID support: maximum disk number now is 128 (#281)

2013-06-28  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- Apacer SDM4 2Gb SSD

2013-06-17  Alex Samorukov <samm@os2.kiev.ua>

	scsicmds.cpp: fix build on RedHat 9
	os_freebsd.cpp: skip port multipliers on FreeBSD
	drivedb.h:
	 - OWC Mercury EXTREME Pro 6G SSD (from #277)
	 - USB: Fujitsu  SATA-to-USB3.0 bridge chip (#280)

2013-06-12  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	- JMicron SSD: P400e/P400m series

2013-06-09  Christian Franke  <franke@computer.org>

	INSTALL, NEWS, README, WARNINGS: Update SVN repository URLs.

2013-06-09  Christian Franke  <franke@computer.org>

	os_win32/smartd_warning.cmd: Using %DATE% in temp file names
	breaks the script if localized date contains '/'
	(This fix is already included in smartmontools-6.1-2.win32-setup.exe).

2013-06-06  Christian Franke  <franke@computer.org>

	os_win32/update-smart-drivedb.nsi: Use new SVN repository for